// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Encapsulation utility functions List Identity utility Generates correct buffer 1`] = `
Object {
  "data": Array [
    99,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`Encapsulation utility functions List Services utility Generates correct buffer 1`] = `
Object {
  "data": Array [
    4,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`Encapsulation utility functions Register session utility Generates correct buffer 1`] = `
Object {
  "data": Array [
    101,
    0,
    4,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`Encapsulation utility functions SendRRData session utility Generates correct buffer 1`] = `
Object {
  "data": Array [
    111,
    0,
    27,
    0,
    145,
    129,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    10,
    0,
    2,
    0,
    0,
    0,
    0,
    0,
    178,
    0,
    11,
    0,
    104,
    101,
    108,
    108,
    111,
    32,
    119,
    111,
    114,
    108,
    100,
  ],
  "type": "Buffer",
}
`;

exports[`Encapsulation utility functions SendUnitData session utility Generates correct buffer 1`] = `
Object {
  "data": Array [
    112,
    0,
    33,
    0,
    145,
    129,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    2,
    0,
    161,
    0,
    4,
    0,
    145,
    125,
    0,
    0,
    177,
    0,
    13,
    0,
    200,
    1,
    104,
    101,
    108,
    108,
    111,
    32,
    119,
    111,
    114,
    108,
    100,
  ],
  "type": "Buffer",
}
`;

exports[`Encapsulation utility functions Unregister session utility Generates correct buffer 1`] = `
Object {
  "data": Array [
    102,
    0,
    0,
    0,
    145,
    129,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;
